--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,47 @@
 /* write your override styles here */
+#wall.tag-1 {
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    display: none;
+}
+
+#wall.tag-2{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 980px;
+    height: 622px;
+}
+
+#wall.tag-3{
+    background: url(../images/tag-3.png) no-repeat;
+z-index: 5;
+display: block;
+}
+
+#parent.tag-4{
+    background: url(../images/tag-4.png) no-repeat;
+    z-index: 4;
+    display: block;
+}
+#parent.tag-5{
+    background: url(../images/tag-5.png) no-repeat;
+    z-index: 3;
+    display: block;
+} 
+
+#parent.tag-6{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 980px;
+    height: 622px;
+}
+#parent.tag-7{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 980px;
+    height: 622px;
+}
+
